improve ability cards, fix area on mobile

--- a/src/app/ui/figures/monster/actions/action.scss
+++ b/src/app/ui/figures/monster/actions/action.scss
@@ -57,7 +57,7 @@
         content: " ";
         display: block;
         position: absolute;
-        left: calc(var(--ghs-column-unit) * -3.3);
+        left: calc(var(--ghs-column-unit) * -3.2);
         width: calc(var(--ghs-column-unit) * 3);
         height: calc(var(--ghs-column-unit) * 3);
         background-image: url('~src/assets/images/element/minus.svg');
@@ -65,31 +65,20 @@
       }
     }
 
-    ghs-monster-action {
-      flex-grow: 1;
-      flex-basis: 0;
-    }
-
   }
 
   ghs-action-hex {
     position: relative;
-    left: calc(var(--ghs-column-unit) * 4.7);
-    top: calc(var(--ghs-column-unit) * -4.5);
-  }
-
-  .action-attack {
-    ghs-action-hex {
-      left: calc(var(--ghs-column-unit) * 4.7);
-      top: calc(var(--ghs-column-unit) * -4.5);
-    }
+    left: calc(var(--ghs-column-unit) * 1);
+    top: 0;
+    transform: translate(50%, -50%);
+    display: block;
   }
 
   ghs-monster-action {
     flex-basis: 100%;
     flex-shrink: 0;
-    display: flex;
-    justify-content: center;
+    max-width: 80%;
 
     &.subaction-area {
       flex-basis: 0;
@@ -99,7 +88,6 @@
     }
 
     .action {
-      max-width: 80%;
       font-size: 80%;
 
       .condition-value {
@@ -112,21 +100,23 @@
     }
   }
 
-
-
   .element-subactions {
     display: flex;
     flex-direction: column;
-    flex-shrink: 0;
     flex-basis: 100%;
-    max-width: calc(var(--ghs-unit) * 25);
-
-    ghs-action-hex {
-      top: 0;
-    }
+    flex-shrink: 0;
+    max-width: calc(var(--ghs-column-unit) * 23);
 
     .subaction-area {
       height: auto;
+    }
+
+    ghs-action-hex {
+      transform: translate(50%, 0);
+    }
+
+    .element {
+      margin-top: 0;
     }
   }
 }
